Add streamer API
